--- a/index.html
+++ b/index.html
@@ -95,15 +95,20 @@
       text-align: left;
     }
 
-     /* 재고 부족(5개 미만 예시) 시 행 색상 */
-  .low-stock {
-  background-color: #fef08a !important; /* 부드러운 노란색 */
-    }
+    /* 재고가 0개일 때 (아주 옅은 노란색) */
+.low-stock {
+  background-color: #fffbeb !important; /* 아주 연한 파스텔 노란색 */
+}
 
-    /* 마우스를 올렸을 때도 노란색이 유지되도록 설정 */
-   tbody tr.low-stock:hover {
-   background-color: #fde047 !important;
-    }
+/* 행 구분을 위해 아래쪽 선을 조금 더 명확하게 설정 */
+.low-stock td {
+  border-bottom: 1px solid #fef3c7 !important;
+}
+
+/* 마우스 올렸을 때 색상 */
+tbody tr.low-stock:hover {
+  background-color: #fef3c7 !important;
+}
 
     
     /* 마지막 열 선 제거 */
