--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
     /* 재고가 0개일 때 (아주 옅은 노란색) */
     .low-stock {
-        background-color: #fef9c3 !important; /* 아주 연한 파스텔 노란색 */
+        background-color: #fffbeb !important; /* 아주 연한 파스텔 노란색 */
     }
 
     /* 행 구분을 위해 아래쪽 선을 조금 더 명확하게 설정 */
@@ -107,7 +107,7 @@
 
     /* 마우스 올렸을 때 색상 */
     tbody tr.low-stock:hover {
-          background-color: #fef08a !important;
+          background-color: #fef3c7 !important;
     }
     
     /* 마지막 열 선 제거 */
