--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@ thead th:hover {
 <hr />
 
 <h3>현재 재고</h3>
-<div style="margin-bottom: 15px; background: white; padding: 10px; border-radius: 8px; border: 1px solid #e5e7eb;">
-  <input id="search" placeholder="예비품명으로 재고 검색..." style="margin: 0; width: 250px;" />
-  <button onclick="loadParts()" style="background: #0f172a;">조회</button>
+<div style="margin-bottom: 15px;">
+  <input id="search" placeholder="예비품명으로 재고 검색..." style="margin: 0 5px 0 0; width: 250px;" />
+  <button onclick="loadParts()">조회</button>
   <button onclick="resetSearch()" style="background: #6b7280;">초기화</button>
 </div>
 
