--- a/index.html
+++ b/index.html
@@ -185,7 +185,8 @@ thead th:hover {
   <button onclick="loadParts()">조회</button>
   <button onclick="resetSearch()" style="background: #6b7280;">초기화</button>
 </div>
-
+<div class="table-wrapper">
+  
 <div class="table-wrapper">
   
 <div class="table-wrapper">
