--- a/index.html
+++ b/index.html
@@ -387,13 +387,32 @@ function resetLogFilter() {
   loadAllLogs(); // 전체 다시 불러오기
 }
   
-/* 테이블 정렬 함수 */
+/* 1. 현재 재고 검색 초기화 */
+function resetSearch() {
+  console.log("재고 검색 초기화 실행"); // 작동 확인용 로그
+  const searchInput = document.getElementById("search");
+  if (searchInput) {
+    searchInput.value = "";
+  }
+  loadParts(); // 원래 목록 불러오기 함수 실행
+}
+
+/* 2. 입출고 이력 날짜 필터 초기화 */
+function resetLogFilter() {
+  console.log("이력 필터 초기화 실행"); // 작동 확인용 로그
+  const start = document.getElementById("start_date");
+  const end = document.getElementById("end_date");
+  if (start) start.value = "";
+  if (end) end.value = "";
+  loadAllLogs(); // 전체 이력 불러오기 함수 실행
+}
+
+/* 3. 테이블 정렬 함수 (틀 고정 호환 버전) */
 function sortTable(tableId, colIdx, isNumber = false) {
   const table = document.getElementById(tableId);
   const rows = Array.from(table.querySelectorAll("tr"));
   const isAsc = table.getAttribute("data-sort-dir") !== "asc";
   
-  // 데이터 정렬 로직
   rows.sort((a, b) => {
     let valA = a.children[colIdx].innerText;
     let valB = b.children[colIdx].innerText;
@@ -405,20 +424,27 @@ function sortTable(tableId, colIdx, isNumber = false) {
     }
   });
 
-  // 정렬된 순서대로 다시 화면에 그리기
   rows.forEach(row => table.appendChild(row));
-  
-  // 현재 정렬 방향 저장
   table.setAttribute("data-sort-dir", isAsc ? "asc" : "desc");
 
-  // 제목 행에 화살표 표시 (선택사항)
+  // 헤더 화살표 표시
   const headers = table.closest('table').querySelectorAll('th');
   headers.forEach(h => h.classList.remove('sort-asc', 'sort-desc'));
   headers[colIdx].classList.add(isAsc ? 'sort-asc' : 'sort-desc');
 }
 
-  
-loadMainCategory(); loadParts(); loadOutParts(); loadAllLogs();
+/* 4. 엔터키 검색 지원 */
+document.getElementById("search").addEventListener("keypress", function(e) {
+  if (e.key === "Enter") {
+    loadParts();
+  }
+});
+
+/* 5. 페이지 시작 시 실행 */
+loadMainCategory(); 
+loadParts(); 
+loadOutParts(); 
+loadAllLogs();
 </script>
 </body>
 </html>
