--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>예비품 재고 관리</title>
 
   <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 
   <style>
     /* 1. 전체 레이아웃 */
@@ -178,6 +179,7 @@ thead th:hover {
   <input id="search" placeholder="예비품명으로 재고 검색..." style="margin: 0 5px 0 0; width: 250px;" />
   <button onclick="loadParts()">조회</button>
   <button onclick="resetSearch()" style="background: #6b7280;">초기화</button>
+  <button onclick="downloadExcel('list', '현재재고현황')" style="background: #16a34a; margin-left: 10px;">엑셀 저장</button>
 </div>
 
 <div class="table-wrapper">
@@ -198,10 +200,11 @@ thead th:hover {
 
 <h3>입·출고 통합 이력</h3>
 <div style="margin-bottom: 15px;">
-  <input type="date" id="start_date" style="margin: 0;" /> ~ 
-  <input type="date" id="end_date" style="margin: 0;" />
+  <input type="date" id="start_date" /> ~ 
+  <input type="date" id="end_date" />
   <button onclick="loadAllLogs()">필터 적용</button>
   <button onclick="resetLogFilter()" style="background: #6b7280;">초기화</button>
+  <button onclick="downloadExcel('all_log_list', '입출고통합이력')" style="background: #16a34a; margin-left: 10px;">엑셀 저장</button>
 </div>
 
 <div class="table-wrapper">
@@ -439,6 +442,21 @@ document.getElementById("search").addEventListener("keypress", function(e) {
     loadParts();
   }
 });
+
+/* 테이블 데이터를 엑셀로 변환하여 다운로드 */
+function downloadExcel(tableBodyId, fileName) {
+  // 1. 테이블 요소 가져오기
+  const table = document.getElementById(tableBodyId).closest('table');
+  
+  // 2. 엑셀 워크북 생성
+  const wb = XLSX.utils.table_to_book(table, { sheet: "Sheet1", raw: true });
+  
+  // 3. 오늘 날짜 구하기 (파일명 뒤에 붙이기용)
+  const today = new Date().toISOString().slice(0, 10);
+  
+  // 4. 파일 다운로드 실행
+  XLSX.writeFile(wb, `${fileName}_${today}.xlsx`);
+}  
 
 /* 5. 페이지 시작 시 실행 */
 loadMainCategory(); 
