--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <title>예비품 재고 관리</title>
 
   <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/exceljs/4.3.0/exceljs.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
 
   <style>
     /* 1. 전체 레이아웃 */
@@ -444,42 +445,45 @@ document.getElementById("search").addEventListener("keypress", function(e) {
 });
 
 /* 테이블 데이터를 엑셀로 변환하여 다운로드 (열 너비 수정 버전) */
-function downloadExcel(tableBodyId, fileName) {
-  // 1. 테이블 요소 가져오기
+async function downloadExcel(tableBodyId, fileName) {
+  const workbook = new ExcelJS.Workbook();
+  const worksheet = workbook.addWorksheet('Sheet1');
   const table = document.getElementById(tableBodyId).closest('table');
   
-  // 2. 워크시트 생성
-  const ws = XLSX.utils.table_to_sheet(table);
+  // 1. 헤더 추출 및 스타일 적용
+  const headerRow = [];
+  table.querySelectorAll('thead th').forEach(th => headerRow.push(th.innerText));
+  const sheetHeader = worksheet.addRow(headerRow);
   
-  // 3. 열 너비(Width) 설정 (단위: 문자 개수 기준)
-  if (tableBodyId === 'list') {
-    ws['!cols'] = [
-      { wch: 20 }, // 대분류
-      { wch: 20 }, // 중분류
-      { wch: 15 }, // 예비품명
-      { wch: 5 }, // 수량
-      { wch: 20 }, // 보관위치
-      { wch: 20 }  // 비고
-    ];
-  } else {
-    ws['!cols'] = [
-      { wch: 25 }, // 일시
-      { wch: 10 }, // 구분
-      { wch: 20 }, // 대분류
-      { wch: 20 }, // 중분류
-      { wch: 15 }, // 예비품명
-      { wch: 5 }, // 수량
-      { wch: 20 }  // 비고
-    ];
-  }
+  sheetHeader.eachCell((cell) => {
+    cell.fill = {
+      type: 'pattern',
+      pattern: 'solid',
+      fgColor: { argb: 'FF1E3A8A' } // 남색 배경
+    };
+    cell.font = {
+      color: { argb: 'FFFFFFFF' }, // 흰색 글자
+      bold: true
+    };
+    cell.alignment = { vertical: 'middle', horizontal: 'center' };
+  });
 
-  // 4. 워크북 생성 및 시트 추가
-  const wb = XLSX.utils.book_new();
-  XLSX.utils.book_append_sheet(wb, ws, "Sheet1");
-  
-  // 5. 오늘 날짜 구하기 및 다운로드
+  // 2. 데이터 추출
+  table.querySelectorAll(`tbody#${tableBodyId} tr`).forEach(tr => {
+    const rowData = [];
+    tr.querySelectorAll('td').forEach(td => rowData.push(td.innerText));
+    worksheet.addRow(rowData);
+  });
+
+  // 3. 열 너비 설정
+  worksheet.columns = tableBodyId === 'list' 
+    ? [{width:15}, {width:20}, {width:30}, {width:10}, {width:20}, {width:30}]
+    : [{width:25}, {width:10}, {width:15}, {width:20}, {width:30}, {width:10}, {width:30}];
+
+  // 4. 파일 저장
+  const buffer = await workbook.xlsx.writeBuffer();
   const today = new Date().toISOString().slice(0, 10);
-  XLSX.writeFile(wb, `${fileName}_${today}.xlsx`);
+  saveAs(new Blob([buffer]), `${fileName}_${today}.xlsx`);
 }
 
 /* 5. 페이지 시작 시 실행 */
