--- a/index.html
+++ b/index.html
@@ -517,19 +517,67 @@ async function downloadExcel(tableBodyId, fileName) {
 const MASTER_ID = "bio_admin";  // 사용할 아이디
 const MASTER_PW = "bio0213!"; // 사용할 비밀번호
 
+// 설정: 자동 로그아웃 시간 (30분 = 30 * 60 * 1000 밀리초)
+const INACTIVITY_TIME = 30 * 60 * 1000; 
+let logoutTimer;
+
+// 1. 로그인 체크 함수 (상태 유지 기능 추가)
 function checkLogin() {
   const id = document.getElementById("login-id").value;
   const pw = document.getElementById("login-pw").value;
   const msg = document.getElementById("login-msg");
 
   if (id === MASTER_ID && pw === MASTER_PW) {
-    // 로그인 성공 시 오버레이 삭제
+    // 로그인 성공 시 세션 저장소에 '로그인 됨' 상태와 현재 시간 기록
+    sessionStorage.setItem("isLoggedIn", "true");
+    sessionStorage.setItem("lastActivity", Date.now());
+    
     document.getElementById("login-overlay").style.display = "none";
-    alert("환영합니다! 사업소 관리자님.");
+    resetLogoutTimer(); // 타이머 시작
   } else {
     msg.innerText = "아이디 또는 비밀번호가 틀렸습니다.";
   }
 }
+
+// 2. 페이지 로드 시 로그인 상태 확인 (F5 눌러도 유지됨)
+window.onload = function() {
+  const isLoggedIn = sessionStorage.getItem("isLoggedIn");
+  const lastActivity = sessionStorage.getItem("lastActivity");
+  const now = Date.now();
+
+  // 로그인 상태이고, 마지막 활동으로부터 30분이 지나지 않았을 때
+  if (isLoggedIn === "true" && (now - lastActivity < INACTIVITY_TIME)) {
+    document.getElementById("login-overlay").style.display = "none";
+    sessionStorage.setItem("lastActivity", now); // 활동 시간 갱신
+    resetLogoutTimer();
+  }
+  
+  // 기존에 있던 초기 데이터 로드 함수들 실행
+  loadMainCategory(); 
+  loadParts(); 
+  loadOutParts(); 
+  loadAllLogs();
+};
+
+// 3. 자동 로그아웃 관련 함수
+function resetLogoutTimer() {
+  clearTimeout(logoutTimer);
+  // 마지막 활동 시간 갱신
+  sessionStorage.setItem("lastActivity", Date.now());
+  // 30분 뒤에 로그아웃 실행
+  logoutTimer = setTimeout(logout, INACTIVITY_TIME);
+}
+
+function logout() {
+  sessionStorage.clear(); // 세션 정보 삭제
+  alert("장시간 활동이 없어 안전을 위해 로그아웃되었습니다.");
+  location.reload(); // 페이지 새로고침하여 로그인 창 띄우기
+}
+
+// 4. 마우스 움직임이나 클릭이 있으면 타이머를 초기화 (활동 중으로 간주)
+window.onmousemove = resetLogoutTimer;
+window.onkeypress = resetLogoutTimer;
+window.onclick = resetLogoutTimer;
 
 // 엔터 키로도 로그인 가능하게 설정
 document.getElementById("login-pw").addEventListener("keypress", function(e) {
